hook up with im-api

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-card-component/video-card-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-card-component/video-card-panel.component.html
@@ -2,7 +2,7 @@
     <div class="image-container">
       <div style="width: 650px;">
         <youtube-player 
-          videoId={{attachment.videoId}}
+          videoId={{convertToYoutubeId(video.externalUri)}}
           suggestedQuality="highres" 
           [startSeconds]="1"
           [endSeconds]="20"
@@ -12,8 +12,8 @@
       </div>
     </div>
     <div class="info-panel">
-      <div class="row">Video Title: <strong>{{attachment.videoTitle}}</strong></div>
-      <div class="row">Date Uploaded: <strong>{{convertToDate(attachment.uploadedTimestamp)}}</strong></div>
+      <div class="row">Video Title: <strong>{{video.externalUriDisplayLabel}}</strong></div>
+      <div class="row">Date Uploaded: <strong>{{convertToDate(video.createdTimestamp)}}</strong></div>
       <div class="divider action"></div>
       <div class="action">
         <mat-icon (click)="edit()">edit</mat-icon> Edit Video Details
