--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-gallery-panel.component.html
@@ -5,6 +5,6 @@
     </div>
     <div class="image-gallery">
       <!-- IsPrimary will be coming from published data? Not sure where this is going to go yet -->
-      <video-card-panel *ngFor="let video of testVideoLinks" [video]="video" [isPrimary]="false" [incident]="incident"></video-card-panel>
+      <video-card-panel *ngFor="let video of externalUriList.collection" [video]="video" [isPrimary]="false" [incident]="incident"></video-card-panel>
     </div>
   </ng-container>
