--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -115,7 +115,9 @@
 
         <ng-container matColumnDef = "addToWatchlist">
             <th mat-header-cell *matHeaderCellDef> Add to Watchlist</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="addToWatchlist(item)"><span #el ><mat-icon style="color:#1A5A96">{{onWatchlist(item) ? 'bookmark_border' : 'bookmark'}}</mat-icon></span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="onWatchlist(item) ? removeFromWatchlist(item) : addToWatchlist(item)">
+                <span #el ><mat-icon style="color:#1A5A96">{{onWatchlist(item) ? 'bookmark' : 'bookmark_border'}}</mat-icon></span>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef = "viewMap">
