promote dialog if not desktop

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -12,7 +12,7 @@
                             <div>
                                 <span class="address">{{option.address}}</span>
                             </div>
-                            <div class="locality">{{option.localityName}} ({{option.localityType}})</div>
+                            <div class="locality">{{option.localityName}} ({{option.localityType}})</div>vic west rental
                         </div>
                         <div *ngIf="option.address === ''">
                             <div>
