--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -596,6 +596,7 @@ iframe#login-iframe {
     border-right: none;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    transition: 0.5s;
 }
 .search-location-close-container{
     border:1px solid black;
