--- a/client/wfnews-war/src/main/angular/src/app/components/download-pm-dialog/download-pm-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/download-pm-dialog/download-pm-dialog.component.html
@@ -1,14 +1,26 @@
 <ng-container>
-    <div class="dialog-container contact-widget-dialog-container">
-        <h1 mat-dialog-title>Contact Information <mat-icon [mat-dialog-close]="false">close</mat-icon></h1>
+    <div class="dialog-container">
         <div class="dialog-content" mat-dialog-content>
-            <div class="contact-widget-dialog-content">
-                <div class="panel left-panel">
-                    <div class="">
-                        hey.
+            <div class="panel">
+                <div class="upper-half">
+                    <div class="pm-logo">
+                        <img src="/assets/icons/pm-logo.png" width="60" height="60" alt="image">
                     </div>
-                    <div class="pt-3">
-                        yo.
+                    <div class="app-title">
+                        <h4>BC Wildfire Service</h4>
+                        <div>Province of British Columbia, Canada</div>
+                        <div>Free - On {{data.app}}</div>
+                    </div>
+                    <mat-icon [mat-dialog-close]="false">close</mat-icon>
+                </div>
+                <div class="bottom-half">
+                    For a better experience, download the BC Wildfire Service phone app for free.
+                    <div style="padding-top:20px">
+                        <button class="cancel-button" (click)="cancel()" >Cancel</button>
+                        <button class="download-button" (click)="download()" >Download</button>
+                        <div style="padding-top:20px">
+                            <mat-checkbox [(ngModel)]="dontShowAgain">Do not show this message again</mat-checkbox>
+                        </div>
                     </div>
                 </div>
             </div>
