--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
@@ -7,6 +7,7 @@
 <div class="incident-details" *ngIf="loaded && !failedToLoad">
   <div class="header">
     <div class="smk-command-button smk-move smk-icon"><div class="smk-command"><em title="Close Panel" (click)="close()" class="material-icons button">close</em></div></div>
+    <button class="zoom-to-button"(click)="ZoomIn()">Zoom to</button>
     <div *ngIf="identifiedFeatures.length > 1" class="smk-command-button smk-move smk-icon"><div class="smk-command"><em (click)="next()" class="button material-icons">navigate_next</em></div></div>
     <span *ngIf="identifiedFeatures.length > 1" class="smk-position" style="margin-top: 6px;">{{identifiedFeatures.length}}</span> <span *ngIf="identifiedFeatures.length > 1" style="margin-top: 5px;">of</span> <span *ngIf="identifiedFeatures.length > 1" class="smk-position" style="margin-top: 6px;">{{index}}</span>
     <div *ngIf="identifiedFeatures.length > 1" class="smk-command-button smk-move smk-icon"><div class="smk-command"><em (click)="previous()" class="button material-icons">navigate_before</em></div></div>
