--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -44,15 +44,14 @@
         </div>
 
         <div class="field">
-            <div class="my-location-button">
-                <button mat-raised-button (click)="useMyCurrentLocation()" >
-                    <mat-icon>my_location</mat-icon>
-                    Find My Location
-                </button>
-            </div>
+          <div class="my-location-button">
+            <button mat-raised-button (click)="useMyCurrentLocation()" style="width: 100%">
+              <mat-icon>my_location</mat-icon><span style="width: 100%;">My Location</span>
+            </button>
+          </div>
         </div>
 
-        <div class="field" style = "padding-left: 4rem;">
+        <div class="field">
             <mat-label class="label">Fire Centre</mat-label>
             <select appWFSingleSelect appWFPlaceholder="Select..."
                     aria-label="Type"
