Shrink clear buttons

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="field">
-            <button mat-raised-button color="primary" (click)="clearSearchAndFilters()"><mat-icon svgIcon="filter-cancel"></mat-icon>Clear</button>
+            <button mat-raised-button color="primary" (click)="clearSearchAndFilters()" style="width: 100px;"><mat-icon svgIcon="filter-cancel"></mat-icon>Clear</button>
         </div>
     </div>
 
