fix css ampersand

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -23,7 +23,7 @@
   width: 100%;
   .mat-raised-button {
     box-shadow: none;
-    width: 100&;
+    width: 100%;
   }
   .mat-icon {
     padding-right: 5px;
